--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 
     <head>
    	  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+      <meta name="Keywords" content="html, css,web untitled, github, webnotes, cbu, abdullah, öğük, programming,">
+      <meta name="Author" content="Abdullah Öğük,abdullahoguk@gmail.com">
       <title>Title of page</title>
     </head>
+    
     <!-- Starting of body  -->
     <body>
    		<h1>Header 1</h1>
