--- a/xhtml/index.html
+++ b/xhtml/index.html
@@ -21,8 +21,15 @@
 
       <p><a href="#contact"> Go to Contact Us </a></p>
 
-      <p>This is paragraph and &nbsp this line ends <br /> paragraph continues from new line with br tag. Thank you html!</p>
+      <p >This is paragraph and &nbsp this line ends <br /> paragraph continues from new line with br tag. Thank you html!</p>
       <p>This is another paragraph</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
       <pre>Pre tag: Text will    appear
          like how it is 
             written in the code
