--- a/xhtml/index.html
+++ b/xhtml/index.html
@@ -23,13 +23,13 @@
 
       <p >This is paragraph and &nbsp this line ends <br /> paragraph continues from new line with br tag. Thank you html!</p>
       <p>This is another paragraph</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      </p></blockquote>
       <pre>Pre tag: Text will    appear
          like how it is 
             written in the code
@@ -43,7 +43,7 @@
         sub<sub>text</sub> &nbsp
         sup<sup>text</sup> &nbsp&nbsp
         <big><strong><i>big strong italic</i></strong></big> &nbsp
-        <a href="https://abdullahoguk.github.io" title="My website "> This is Link </a> &nbsp 
+        <a href="https://abdullahoguk.github.io" title="My website " target="_blank"> This is Link </a> &nbsp 
         <a href="mailto:abdullahogk@gmail.com"> Send me e-mail </a>
       </p>
       <hr />
