--- a/css/index.html
+++ b/css/index.html
@@ -6,6 +6,7 @@
    	  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
       <meta name="Keywords" content="html, css,web untitled, github, webnotes, cbu, abdullah, öğük, programming,">
       <meta name="Author" content="Abdullah Öğük, abdullahoguk@gmail.com">
+      <link rel="stylesheet" type="text/css" href="style.css" />
       <title>Title of page</title>
     </head>
     
