--- a/css/index.html
+++ b/css/index.html
@@ -13,7 +13,7 @@
     <!-- Starting of body  -->
     <body>
    		<h1>Header 1</h1>
-      <h2>Header 2</h2>
+      <h2 class="first_class">Header 2</h2>
       <h3>Header 3</h3>
       <h4>Header 4</h4>
       <h5>Header 5</h5>
@@ -22,8 +22,8 @@
 
       <p><a href="#contact"> Go to Contact Us </a></p>
 
-      <p >This is paragraph and &nbsp this line ends <br /> paragraph continues from new line with br tag. Thank you html!</p>
-      <p>This is another paragraph</p>
+      <p id="first_id" >This is paragraph and it has different color than other ones and &nbsp this line ends <br /> paragraph continues from new line with br tag.  Thank you html and css!</p>
+      <p class="first_class">This is another paragraph</p>
       <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -36,7 +36,7 @@
             written in the code
       </pre>
       
-      <p>
+      <p class="first_class">
         <strong>strong</strong> &nbsp
         <big>big</big> &nbsp
         <small>small</small> 
@@ -132,16 +132,11 @@
 
         <fieldset>
         <legend>How is our website???</legend> 
-        <label>Awesome    
-        <input type="radio" name="opinion" /></label> <br />
-        <label>Quite good    
-        <input type="radio" name="opinion" /></label> <br />
-        <label>Moderate
-        <input type="radio" name="opinion" /></label> <br />
-        <label>No Comment 
-        <input type="radio" name="opinion" /></label> <br />
-        <label>Bullsh**    
-        <input type="radio" name="opinion" /><label> <br />  
+        <label><input type="radio" name="opinion" />Awesome</label> <br />
+        <label><input type="radio" name="opinion" /> Quite good </label> <br />
+        <label><input type="radio" name="opinion" />Moderate</label> <br />
+        <label><input type="radio" name="opinion" />No Comment</label> <br />
+        <label><input type="radio" name="opinion" />Bullsh**<label> <br />  
         </fieldset>
         <br />
 
