--- a/project/index.html
+++ b/project/index.html
@@ -76,7 +76,7 @@
         </section>
 
         <footer>
-            <p><b>Movie Project</b> | copyright Abdullah Öğük © MMXV  </p>
+            <p><b>Movie Project</b> | copyright © Abdullah Öğük MMXV  </p>
 
         </footer>
 	  
