--- a/project/admin.html
+++ b/project/admin.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     	<meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="reset.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Movie Project</title>
     </head>
 
@@ -66,7 +68,7 @@
         </section>
 
         <footer>
-            <p><b>Movie Project</b> | copyright © Abdullah Öğük  MMXV  </p>
+            <p><b>Movie Project</b> | copyright © <a href="mailto:abdullahoguk@gmail.com"> Abdullah Öğük</a> MMXV  </p>
 
         </footer>
 	  
