--- a/project/index.html
+++ b/project/index.html
@@ -4,6 +4,12 @@
     	<meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="style.css">
+
+        <!--[if lt IE 9]>
+        <script src= "scripts/html5.js"></script>
+        <script src= "scripts/html5shiv-printshiv.js"></script>
+        <![endif]-->
+
         <title>Movie Project</title>
     </head>
 
@@ -21,16 +27,16 @@
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
-            </ul class= "admin">
-             <ul>
+            </ul>
+             <ul class= "admin">
                 <li><a href="#"> Manage Users</a></li>
                 <li><a href="#"> Manage Movies</a></li>
             </ul>
         </nav>
 
-        <nav class= "favs">
+        <nav class= "favs_list">
             <h2>Favourites</h2>
-             <ul>
+             <ul class="favs">
                 <li><a href="#"> Movie 1</a></li>
                 <li><a href="#"> Movie 2</a></li>
                 <li><a href="#"> Movie 3</a></li>
@@ -39,14 +45,19 @@
 
         <section class= "movie_list">
             <h2>Hi. (username)</h2>
-            <p class= "welcome">Here is some movies you might like.Click on the heart icon to add them into your favourates list.</p>
+            <p class= "welcome">Here is some movies you might like. Click on the heart icon to add them into your favourates list.</p>
             <ul>
                 <li>
                     <figure>
                         <a href="#"> <img class="thumbnail" alt= "Thumbnail" src= "images-movies/movie-fail-low.png"></a>
                         <figcaption>
                             <h3><a href="#"> Movie title </a></h3>
-                            <div class="description">Movie Description</div>
+                            <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                         </figcaption>
                     </figure>
                 </li>
@@ -55,7 +66,12 @@
                         <a href="#"> <img class="thumbnail" alt= "Thumbnail" src= "images-movies/movie-fail-low.png"></a>
                         <figcaption>
                             <h3><a href="#"> Movie title </a></h3>
-                            <div class="description">Movie Description</div>
+                            <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                         </figcaption>
                     </figure>
                 </li>
@@ -64,7 +80,12 @@
                         <a href="#"> <img class="thumbnail" alt= "Thumbnail" src= "images-movies/movie-fail-low.png"></a>
                         <figcaption>
                             <h3><a href="#"> Movie title </a></h3>
-                            <div class="description">Movie Description</div>
+                            <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                         </figcaption>
                     </figure>
                 </li>
@@ -73,7 +94,12 @@
                         <a href="#"> <img class="thumbnail" alt= "Thumbnail" src= "images-movies/movie-fail-low.png"></a>
                         <figcaption>
                             <h3><a href="#"> Movie title </a></h3>
-                            <div class="description">Movie Description</div>
+                            <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                         </figcaption>
                     </figure>
                 </li>
@@ -85,7 +111,5 @@
 
         </footer>
 	  
-    </body>
-
-    
+    </body>  
 </html> 
