--- a/project/movie-single.html
+++ b/project/movie-single.html
@@ -37,7 +37,7 @@
             </ul>
         </nav>
 
-        <section>
+        <section class="movie_single">
            Large Movie Image
            <h3>Movie Title</h3>
            <div><p>Add to /Remove from Favourates</p></div>
