--- a/php/code/index.html
+++ b/php/code/index.html
@@ -1,2 +1,5 @@
-Hello from user directory
-<?php phpinfo(); ?>
+<p>Hello from user directory</p>
+	<?php 
+		phpinfo();
+		//this piece of code won'n run because, the extension is not '.php' 
+	?>
