movie project day 2

--- a/project/index.html
+++ b/project/index.html
@@ -22,13 +22,13 @@
             <div class="select_users">
                 <h2><a href="#"> UserName </a></h2>
             </div>
-            <ul class= "users">
+            <ul class= "users_menu">
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
             </ul>
-             <ul class= "admin">
+             <ul class= "admin_menu">
                 <li><a href="#"> Manage Users</a></li>
                 <li><a href="#"> Manage Movies</a></li>
             </ul>
