--- a/project/admin.html
+++ b/project/admin.html
@@ -1,67 +1,69 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<meta charset="utf-8">
+        <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="style.css">
+
+        <!--[if lt IE 9]>
+        <script src= "scripts/html5.js"></script>
+        <script src= "scripts/html5shiv-printshiv.js"></script>
+        <![endif]-->
+
         <title>Movie Project</title>
     </head>
 
     <body>
-	    <header>
+        <header>
             <h1>Movie Database Project</h1>
         </header>
 
-        <nav>
-            <div>
+        <nav class="navigation">
+            <div class="select_users">
                 <h2><a href="#"> UserName </a></h2>
             </div>
-            <ul>
+            <ul class= "users_menu">
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
             </ul>
-             <ul>
+             <ul class= "admin_menu">
                 <li><a href="#"> Manage Users</a></li>
                 <li><a href="#"> Manage Movies</a></li>
             </ul>
         </nav>
 
-        <nav>
-            <h2>Favourites</h2>
-             <ul>
-                <li><a href="#"> Movie 1</a></li>
-                <li><a href="#"> Movie 2</a></li>
-                <li><a href="#"> Movie 3</a></li>
-            </ul>
-        </nav>
-
         <section>
-           <div>
+           <div class="admin_users">
                <h2>Manage Users</h2>
             </div>
-            <table>
+            <table class="admin_table">
             <tr>
-                <td>Firstname</td>
-                <td>Lastname</td>
-                <td>Insert/Delete</td>
+                <th class="data_col">Firstname</th>
+                <th class="data_col">Lastname</th>
+                <th class="admin_col">Insert/Delete</th>
             </tr>
-            <tr>
-                <td><input type="text" name="firstname" value = "Ahmet"></td>
-                <td><input type="text" name="lastname" value = "Kasif"></td>
-                <td>Insert/Delete</td>
+            <tr class="datarow">
+                <td><input class="data" type="text" name="firstname" value = "Ahmet"></td>
+                <td><input class="data" type="text" name="lastname" value = "Kasif"></td>
+                <td class="deletecell">Delete</td>
             </tr>
-             <tr>
-                <td><input type="text" name="firstname" value = "Mustafa"></td>
-                <td><input type="text" name="lastname" value = "Özdemir"></td>
-                <td>Insert/Delete</td>
-            </tr>      
-            <tr>
-                <td><input type="text" name="firstname" value = "Abdullah"></td>
-                <td><input type="text" name="lastname" value = "Öğük"></td>
-                <td>Insert/Delete</td>
-            </tr>      
+             <tr class="datarow">
+                <td><input class="data" type="text" name="firstname" value = "Mustafa"></td>
+                <td><input class="data" type="text" name="lastname" value = "Özdemir"></td>
+                <td class="deletecell">Delete</td>
+            </tr>   
+            <tr class="datarow">
+                <td><input class="data" type="text" name="firstname" value = "Abdullah"></td>
+                <td><input class="data" type="text" name="lastname" value = "Öğük"></td>
+                <td class="deletecell">Delete</td>
+            </tr> 
+             <tr class="newdatarow">
+                <td><input class="newdata" type="text" name="firstname" value = ""></td>
+                <td><input class="newdata" type="text" name="" value = ""></td>
+                <td class="insertcell">Insert</td>
+            </tr>   
                     
                     
             </table>
