--- a/project/movie-single.html
+++ b/project/movie-single.html
@@ -12,25 +12,25 @@
             <h1>Movie Database Project</h1>
         </header>
 
-        <nav>
-            <div>
+        <nav class="navigation">
+            <div class="select_users">
                 <h2><a href="#"> UserName </a></h2>
             </div>
-            <ul>
+            <ul class="users_menu">
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
                 <li><a href="#"> List of other users</a></li>
             </ul>
-             <ul>
+             <ul class="admin_menu">
                 <li><a href="#"> Manage Users</a></li>
                 <li><a href="#"> Manage Movies</a></li>
             </ul>
         </nav>
 
-        <nav>
+        <nav class="favs_list" >
             <h2>Favourites</h2>
-             <ul>
+             <ul class="favs">
                 <li><a href="#"> Movie 1</a></li>
                 <li><a href="#"> Movie 2</a></li>
                 <li><a href="#"> Movie 3</a></li>
@@ -38,10 +38,15 @@
         </nav>
 
         <section class="movie_single">
-           Large Movie Image
+           <a href="#"><img class="movie_player" src="images-movies/movie-fail-high.png" alt="images-movies/movie-fail-high.png"></a>
            <h3>Movie Title</h3>
-           <div><p>Add to /Remove from Favourates</p></div>
-           <p>Description</p>
+           <div class="actions"><div class="add_remove"><p>Add to /Remove from Favourites</p></div></div>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+           consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
 
         <footer>
